# pywharf-github

./: .gitignore  .pylintrc  README.md  action.yml  pyproject.toml
.github/workflows/: main.yml
private_pypi_backends/github/: __init__.py  impl.py
pywharf_backends/github/: __init__.py  impl.py
tests/: test_github.py
