[tool.poetry]
name = "private-pypi-github"
version = "0.1.1-alpha.4"
description = ""
license = "MIT"
authors = ["huntzhan <huntzhan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/private-pypi/private-pypi-github"
keywords = ["private", "pypi", "github", "packaging", "dependency"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "private_pypi_backends" },
]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.46"
requests = "^2.23.0"
private-pypi-core = "0.1.3a4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
pylint = "^2.4.4"

[tool.poetry.scripts]
private_pypi_github_create_package_repo = "private_pypi_backends.github.impl:github_create_package_repo_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
